// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TABLE[Label]:: should create label to db 1`] = `
Array [
  Object {
    "color": "#ffffff",
    "id": 1,
    "text": "Inbox",
  },
]
`;

exports[`Test TABLE[Label]:: should update label: color 1`] = `
Array [
  Object {
    "color": "#111111",
    "id": 1,
    "text": "labelmodified",
  },
]
`;

exports[`Test TABLE[Label]:: should update label: color and text 1`] = `
Array [
  Object {
    "color": "#000000",
    "id": 1,
    "text": "labelmodified",
  },
]
`;

exports[`Test TABLE[Label]:: should update label: text 1`] = `
Array [
  Object {
    "color": "#111111",
    "id": 1,
    "text": "labelmodified2",
  },
]
`;
